--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   dropdown_button2: ^2.3.9
   shared_preferences: ^2.5.2
   lucide_icons: ^0.257.0
+  syncfusion_flutter_datepicker: ^28.2.6
+  table_calendar: ^3.2.0
+  provider: ^6.1.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
