--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_fonts: ^6.2.1
   cloud_firestore: ^5.6.2
   google_nav_bar: ^5.0.7
-  firebase_core: ^3.10.1
+  firebase_core: ^3.12.0
   intl: ^0.20.2
   dropdown_button2: ^2.3.9
   shared_preferences: ^2.5.2
@@ -48,6 +48,10 @@ dependencies:
   table_calendar: ^3.2.0
   provider: ^6.1.2
   uuid: ^4.5.1
+  firebase_messaging: ^15.2.3
+  get_it: ^8.0.3
+  flutter_swipe_button: ^2.1.3
+  slider_button: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +63,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
