--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   get_it: ^8.0.3
   flutter_swipe_button: ^2.1.3
   slider_button: ^2.1.0
+  flutter_launcher_icons: ^0.14.3
+  flutter_card_swiper: ^7.0.2
 
 dev_dependencies:
   flutter_test:
@@ -82,7 +84,7 @@ flutter:
     - assets/icons/
     - assets/images/profile/
     - assets/warden/
-
+    # Optional (for Android)
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
@@ -108,3 +110,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/logo.png"
+  #adaptive_icon_background: "#ffffff"  # Background color or image
+  #adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"  # Foreground image (for Android)
