--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,11 @@ dependencies:
   slider_button: ^2.1.0
   flutter_launcher_icons: ^0.14.3
   flutter_card_swiper: ^7.0.2
-
+  flutter_local_notifications: ^18.0.1
+  http: ^1.3.0
+  googleapis_auth: ^1.6.0
+  flutter_dotenv: ^5.2.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -84,6 +88,8 @@ flutter:
     - assets/icons/
     - assets/images/profile/
     - assets/warden/
+    - assets/service-account.json
+    - .env
     # Optional (for Android)
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
