--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@
 .swiftpm/
 migrate_working_dir/
 .env
+
+#igore service account JSON
+assets/service-account.json
+
 # IntelliJ related
 *.iml
 *.ipr
