--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   http: ^1.3.0
   googleapis_auth: ^1.6.0
   flutter_dotenv: ^5.2.1
+  connectivity_plus: ^6.1.3
+  internet_connection_checker: ^3.0.1
+  upi_india: ^3.0.1
   
 dev_dependencies:
   flutter_test:
