--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   internet_connection_checker: ^3.0.1
   vibration: ^3.1.3
   slide_to_act: ^2.0.2
+  qr_flutter: ^4.1.0
+  url_launcher: ^6.3.1
   
 dev_dependencies:
   flutter_test:
