--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ flutter:
     - assets/images/profile/
     - assets/warden/
     - assets/service-account.json
+    - assets/images/paid.png
     - .env
     # Optional (for Android)
   # An image asset can refer to one or more resolution-specific "variants", see
