--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   slide_to_act: ^2.0.2
   qr_flutter: ^4.1.0
   url_launcher: ^6.3.1
+  geocoding: ^3.0.0
+  geolocator: ^13.0.3
   
 dev_dependencies:
   flutter_test:
