--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   url_launcher: ^6.3.1
   geocoding: ^3.0.0
   geolocator: ^13.0.3
+  animated_snack_bar: ^0.4.0
   
 dev_dependencies:
   flutter_test:
