--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   animated_snack_bar: ^0.4.0
   smooth_page_indicator: ^1.2.1
   introduction_screen: ^3.1.17
+  flutter_native_splash: ^2.4.5
+  flutter_spinkit: ^5.2.1
   
 dev_dependencies:
   flutter_test:
@@ -133,3 +135,9 @@ flutter_launcher_icons:
   image_path: "assets/icons/logo.png"
   #adaptive_icon_background: "#ffffff"  # Background color or image
   #adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"  # Foreground image (for Android)
+flutter_native_splash:
+  color: "#ffffff"  # Background color
+  image: assets/icons/logo.png  # Your splash image
+  android: true
+  ios: true
+  fullscreen: true
