--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,9 @@ dependencies:
   introduction_screen: ^3.1.17
   flutter_native_splash: ^2.4.5
   flutter_spinkit: ^5.2.1
-  
+  lottie: ^3.3.1
+  fl_chart: ^0.64.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
