--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   introduction_screen: ^3.1.17
   flutter_native_splash: ^2.4.5
   flutter_spinkit: ^5.2.1
+  restart_app: ^1.3.2
   
 dev_dependencies:
   flutter_test:
